--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="neom_buttoncss.css">
 </head>
 <body>
-    <a href="#">
+    <a href="http://google.com">
         <span></span>
         <span></span>
         <span></span>
